--- a/css/around.css
+++ b/css/around.css
@@ -37,6 +37,7 @@ body{
 }
 
 #page article{
+    flex: 2;
 	padding: 0 20px;
 	font-family: "Quattrocento";
 }
@@ -62,6 +63,10 @@ body{
 #page article ul{
 	margin: 5px 0;
 	padding-left: 40px;
+}
+
+#page aside{
+    flex: 1;
 }
 
 #page aside img{
