--- a/css/prices.css
+++ b/css/prices.css
@@ -56,6 +56,15 @@ body{
     margin: 20px 0;
 }
 
+#page article table{
+    border-collapse: collapse;
+}
+
+#page article td, #page article th{
+    border: 1px solid black;
+    padding: 8px;
+}
+
 #page article img, #page article iframe{
     margin: 20px 20px;
 }
