--- a/css/prices.css
+++ b/css/prices.css
@@ -46,7 +46,7 @@ body{
     margin-bottom: 10px;
 }
 
-#page article h2{
+#page article h2, #page article h3, #page article h4{
     margin-bottom: 15px;
 }
 
