design contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -64,8 +64,10 @@ body{
 }
 
 #page form input[type=submit]{
-    margin-top: 20px;
+    margin: auto;
+    margin-top: 20px !important;
     padding: 5px;
+    width: 15%;
 }
 
 .title{
