--- a/css/contact.css
+++ b/css/contact.css
@@ -57,6 +57,7 @@ body{
 #page form p{
     margin-bottom: 5px;
     font-family: "DIN Pro", serif;
+    font-size: 1.1em;
 }
 
 #page form input{
@@ -78,6 +79,7 @@ body{
 #page form input[type=submit]{
     margin-top: 20px !important;
     padding: 5px;
+    color: white;
     width: 15%;
     background-color: #C0CC4C;
     border: none;
