--- a/css/contact.css
+++ b/css/contact.css
@@ -79,6 +79,7 @@ body{
 #page form input[type=submit]{
     margin-top: 20px !important;
     padding: 5px;
+    font-size: 1.2em;
     color: white;
     width: 15%;
     background-color: #C0CC4C;
