--- a/css/modal.css
+++ b/css/modal.css
@@ -19,14 +19,14 @@
     width: 80%;
 }
 
-#close{
+.close{
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-#close:hover, #close:focus{
+.close:hover, #close:focus{
     color: #000;
     text-decoration: none;
     cursor: pointer;
