update connection link's design in footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,7 @@ footer p{
 	text-align: center;
 	color: white;
 	font-family: "DIN Pro";
-	margin-bottom: 20px;
+	line-height: 30px;
 }
 
 footer #login{
