--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,16 @@ body{
 	width: 200px;
 	height: 100px;
 	text-align: center;
+	float: right;
+	background: rgba(255,255,255,0.6);
+	border: 1px solid black;
+	border-radius: 5px;
+	display: none;
+	transition: all ease-in-out .2s;
+}
+
+#admin:hover{
+	display: block;
 }
 
 #admin img{
