--- a/css/index.css
+++ b/css/index.css
@@ -64,11 +64,12 @@ body{
 
 #admin{
 	width: 200px;
-	height: 100px;
+	padding: 20px;
 	text-align: center;
 	float: right;
     position: relative;
-    top: 500px;
+    top: -1650px;
+	right: 20px;
 	background: rgba(255,255,255,0.6);
 	border: 1px solid black;
 	border-radius: 5px;
