--- a/css/index.css
+++ b/css/index.css
@@ -83,6 +83,16 @@ body{
 	font-family: "DIN Pro";
 }
 
+#admin p a{
+	overflow: auto;
+	color: black;
+	text-decoration: none;
+}
+
+#admin p a:visited{
+	color: black;
+}
+
 /*Mobile and tablet*/
 @media (min-width: 0px) and (max-width: 1024px) {
 
