--- a/css/index.css
+++ b/css/index.css
@@ -67,8 +67,8 @@ body{
 	padding: 20px;
 	text-align: center;
 	float: right;
-    position: relative;
-    top: -1650px;
+    position: fixed;
+    top: 20px;
 	right: 20px;
 	background: rgba(255,255,255,0.8);
 	border: 2px solid black;
