--- a/css/admin.css
+++ b/css/admin.css
@@ -1,4 +1,5 @@
 #admin{
+    display: none;
     width: 200px;
     padding: 20px;
     text-align: center;
@@ -9,6 +10,10 @@
     background: rgba(255,255,255,0.8);
     border: 2px solid black;
     border-radius: 5px;
+}
+
+#admin:hover{
+    display: block;
 }
 
 #admin p img{
